flapivor/tests/m1/hopix/parser/good/89-case-2.hopix
val what_is_in_the_box =
 case box {
   { box = box } => box
 }