flapivor/tests/m1/hopix/parser/bad/89-case-2.hopix
val what_is_in_the_box =
 case box {
   { Box = box } => box
 }